hooking up routes

--- a/browser/index.html
+++ b/browser/index.html
@@ -24,6 +24,7 @@
     <script src="/js/sidebar/sidebar.directive.js"></script>
     <script src="/js/form/form.js"></script>
     <script src="/js/search_result/search_result.js"></script>
+    <script src="/js/row/row.js"></script>
 	</head>
 
 	<body ng-app="argo" layout="column">
