--- a/browser/js/submission-row/submission-row.html
+++ b/browser/js/submission-row/submission-row.html
@@ -1,15 +1,20 @@
+<!-- POLICY -->
+
+
+
 <md-card flex>
   <md-card-content>
     <div layout="row">
       <!-- <h3>{{row}}</h3> -->
       <div flex="80" layout="column" layout-align="">
-        <!-- <h3>Type: {{}}</h3> -->
+        <h3>Submission No.: {{row.SUBMISSION_NO}}</h3>
+        <h3>Status: {{row.Status}}</h3>
         <h3>Agent: {{row.AGENT_NAME}}</h3>
-        <h3>Insured name: {{row.INSURED_NAME}}</h3>
-        <h3>Insured state: {{row.INSURED_STATE}}</h3>
+        <h3>Insured: {{row.INSURED_NAME}}</h3>
+        <h3>State: {{row.INSURED_STATE}}</h3>
         <h3>Underwriter: {{row.UNDERWRITER_NAME}}</h3>
-        <h3>Operating unit name: {{row.OPERATING_UNIT_NAME}}</h3>
-        <h3>Quote in: {{row.QUOTED_YEAR}}</h3>
+        <h3>Operating unit: {{row.OPERATING_UNIT_NAME}}</h3>
+        <h3>Date of submission: {{row.submission_date}}</h3>
       </div>
 
 <!--       <div layout="column" layout-align="center end" flex>
