--- a/browser/index.html
+++ b/browser/index.html
@@ -25,8 +25,7 @@
     <script src="/js/form/form.js"></script>
     <script src="/js/policy_result/policy_result.js"></script>
     <script src="/js/submission_to_review_result/submission_to_review_result.js"></script>
-    <script src="/js/policy-row/policy-row.js"></script>
-    <script src="/js/submission-row/submission-row.js"></script>
+    <!-- <script src="/js/submission-row/submission-row.js"></script> -->
 	</head>
 
 	<body ng-app="argo" layout="column">
