--- a/browser/js/form/form.html
+++ b/browser/js/form/form.html
@@ -39,7 +39,7 @@
     		<input id="submissions_underwriter_reject" type="checkbox" value="submissions_underwriter_reject">
     		<label for="submissions_underwriter_reject">Submissions rejected by underwriters</label>
   		</div> -->
-
+<!-- 
 		  <h4 class="ui dividing header">More details (optional)</h4>
 		  <div class="field">
 		    <div class="two fields">
@@ -130,7 +130,7 @@
 				    <option value="WY">Wyoming</option>
 		      </select>
 		    </div>
-		  </div>
+		  </div> -->
 		  <center><div class="ui button" tabindex="0" ng-click="search(type)">Search</div></center>
 		</form>
   </div>
