--- a/browser/index.html
+++ b/browser/index.html
@@ -6,18 +6,12 @@
     <link rel="stylesheet" type="text/css" href=https://fonts.googleapis.com/css?family=Questrial|Montserrat>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/angular-material/angular-material.min.css" />
-<!--     <link rel="stylesheet" type="text/css" href="/style.css" /> -->
-<!--     <link rel="stylesheet" type="text/css" href="/jquery-ui/jquery-ui.min.css" /> -->
     <script src="/lodash/index.js"></script>
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <script src="/jquery-ui/jquery-ui.min.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
     <script src="/angular-aria/angular-aria.min.js"></script>
     <script src="/angular-material/angular-material.min.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
-    <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
 		<script src="dist/semantic.min.js"></script>
     <script src="/js/app.js"></script>
@@ -25,13 +19,12 @@
     <script src="/js/form/form.js"></script>
     <script src="/js/policy_result/policy_result.js"></script>
     <script src="/js/submission_to_review_result/submission_to_review_result.js"></script>
-    <!-- <script src="/js/submission-row/submission-row.js"></script> -->
 	</head>
 
 	<body ng-app="argo" layout="column">
 		<div class="ui container">
-  		<h1>This is an app to help Argo Digital underwriters to visualize & explore data in their database</h1>
-      <a ui-sref="form">Start</a>
+  		<h1>This is an app to help Argo Digital underwriters to explore the database</h1>
+      <center><button class="ui teal button" ui-sref="form">Start</button></center>
       <ui-view></ui-view>
   	</div>
 <!--   	<div class='col-xs-2'>
