--- a/browser/js/form/form.html
+++ b/browser/js/form/form.html
@@ -3,142 +3,20 @@
   	<div class="field">
 	  	<div class="two fields">
 			<div class="field">
-				<label>Underwriter name</label></br>
+				<h4 class="ui dividing header">Underwriter name (optional)</h4>
 				<input type="text" name="underwriter_name" ng-model="underwriter" placeholder="ex: Katie Adler">
 		</div>
 	</div>
-    <h4 class="ui dividing header">Types of entries you'd like to view</h4>
+    <h4 class="ui dividing header">Types of entries you'd like to view (required)</h4>
 		<form class="ui form">
 		
 			<label>
-	        <input type="radio" ng-model="type" value="1">Submissions to review</input>
+	        <input type="radio" ng-model="type" value="1">   Submissions to review</input>
 	    </label></br>
 	    <label>
-	        <input type="radio" ng-model="type" value="2">Policies</input>
+	        <input type="radio" ng-model="type" value="2">   Policies</input>
 	    </label>
-<!-- 	    <label>
-	        <input type="radio" ng-model="type" value="3">3</input>
-	    </label>
-	    <label>
-	        <input type="radio" ng-model="type" value="4">4</input>
-	    </label>
-	    <label>
-	        <input type="radio" ng-model="type" value="5">5</input>
-	    </label>
- -->
-		<!-- 	<div class="ui checkbox" ng-model=type>
-    		<input id="submissions" type="checkbox" value="submissions">
-    		<label for="submissions">Submissions to be reviewed</label>
-  		</div></br>
-			<div class="ui checkbox">
-    		<input id="policies" type="checkbox" value="policies">
-    		<label for="policies">Policies</label>
-  		</div></br>
-  		<div class="ui checkbox">
-  		  <input id="quotes_getting_reviewed" type="checkbox" value="quotes_getting_reviewed">
-    		<label for="quotes_getting_reviewed">Quotes clients are reviewing</label>
-  		</div></br>
-  		<div class="ui checkbox">
-    		<input id="quotes_client_reject" type="checkbox" value="quotes_client_reject">
-    		<label for="quotes_client_reject">Quotes rejected by clients</label>
-  		</div></br>
-    	<div class="ui checkbox">
-    		<input id="submissions_underwriter_reject" type="checkbox" value="submissions_underwriter_reject">
-    		<label for="submissions_underwriter_reject">Submissions rejected by underwriters</label>
-  		</div> -->
-<!-- 
-		  <h4 class="ui dividing header">More details (optional)</h4>
-		  <div class="field">
-		    <div class="two fields">
-		      <div class="field">
-		      	<label>Agent name</label>
-		        <input type="text" name="agent_name" placeholder="Agent's name">
-		      </div>
-		      <div class="field">
-		      	<label>Agent's code</label>
-		        <input type="text" name="agent_code" placeholder="Agent's code">
-		      </div>
-		    </div>
-		    <div class="two fields">
-		      <div class="field">
-		        <label>Parent agent name</label>
-		        <input type="text" name="parent_agent_name" placeholder="Parent agent's name">
-		      </div>
-		      <div class="field">
-		        <label>Parent agent code</label>
-		        <input type="text" name="parent_agent_code" placeholder="Parent agent's code">
-		      </div>
-		    </div>
-		    <label>Underwriter name</label>
-		    <div class="field">
-		      <input type="text" name="underwriter_name" placeholder="Underwriter's name">
-		    </div>
-		    <label>Insured name</label>
-		    	<div class="field">
-		      <input type="text" name="insured_name" placeholder="Insured name">
-		    </div>
-		  </div>
-
-		  <div class="two fields">
-		    <div class="field">
-		      <label>Insured state</label>
-		      <select class="ui fluid dropdown">
-		        <option value="">State</option>
-				    <option value="AL">Alabama</option>
-				    <option value="AK">Alaska</option>
-				    <option value="AZ">Arizona</option>
-				    <option value="AR">Arkansas</option>
-				    <option value="CA">California</option>
-				    <option value="CO">Colorado</option>
-				    <option value="CT">Connecticut</option>
-				    <option value="DE">Delaware</option>
-				    <option value="DC">District Of Columbia</option>
-				    <option value="FL">Florida</option>
-				    <option value="GA">Georgia</option>
-				    <option value="HI">Hawaii</option>
-				    <option value="ID">Idaho</option>
-				    <option value="IL">Illinois</option>
-				    <option value="IN">Indiana</option>
-				    <option value="IA">Iowa</option>
-				    <option value="KS">Kansas</option>
-				    <option value="KY">Kentucky</option>
-				    <option value="LA">Louisiana</option>
-				    <option value="ME">Maine</option>
-				    <option value="MD">Maryland</option>
-				    <option value="MA">Massachusetts</option>
-				    <option value="MI">Michigan</option>
-				    <option value="MN">Minnesota</option>
-				    <option value="MS">Mississippi</option>
-				    <option value="MO">Missouri</option>
-				    <option value="MT">Montana</option>
-				    <option value="NE">Nebraska</option>
-				    <option value="NV">Nevada</option>
-				    <option value="NH">New Hampshire</option>
-				    <option value="NJ">New Jersey</option>
-				    <option value="NM">New Mexico</option>
-				    <option value="NY">New York</option>
-				    <option value="NC">North Carolina</option>
-				    <option value="ND">North Dakota</option>
-				    <option value="OH">Ohio</option>
-				    <option value="OK">Oklahoma</option>
-				    <option value="OR">Oregon</option>
-				    <option value="PA">Pennsylvania</option>
-				    <option value="RI">Rhode Island</option>
-				    <option value="SC">South Carolina</option>
-				    <option value="SD">South Dakota</option>
-				    <option value="TN">Tennessee</option>
-				    <option value="TX">Texas</option>
-				    <option value="UT">Utah</option>
-				    <option value="VT">Vermont</option>
-				    <option value="VA">Virginia</option>
-				    <option value="WA">Washington</option>
-				    <option value="WV">West Virginia</option>
-				    <option value="WI">Wisconsin</option>
-				    <option value="WY">Wyoming</option>
-		      </select>
-		    </div>
-		  </div> -->
-		  <center><div class="ui button" tabindex="0" ng-click="search(type)">Search</div></center>
+		  <center><div class="ui green button" tabindex="0" ng-click="search(type)">Search</div></center>
 		</form>
   </div>
 </div>
