--- a/browser/index.html
+++ b/browser/index.html
@@ -19,12 +19,13 @@
     <script src="/js/form/form.js"></script>
     <script src="/js/policy_result/policy_result.js"></script>
     <script src="/js/submission_to_review_result/submission_to_review_result.js"></script>
+    <script src="/js/rejected_quotes_result/rejected_quotes_result.js"></script>
 	</head>
 
 	<body ng-app="argo" layout="column">
 		<div class="ui container">
-  		<h1>This is an app to help Argo Digital underwriters to explore the database</h1>
-      <center><button class="ui teal button" ui-sref="form">Start</button></center>
+  		<center><h1>This is an app to help Argo Digital underwriters to explore the database</h1></center></br>
+      <center><button class="ui teal button" ui-sref="form">Start</button></center></br>
       <ui-view></ui-view>
   	</div>
 <!--   	<div class='col-xs-2'>
