--- a/browser/js/sidebar/sidebar.html
+++ b/browser/js/sidebar/sidebar.html
@@ -1,10 +1,10 @@
-<h1>hellooo???</h1>
+<!-- <h1>hellooo???</h1>
 <section>
   <h2>You're in sidebar.html!</h2>
- <!--  <h4 ui-sref-active="active" class="menu-item active">
+  <h4 ui-sref-active="active" class="menu-item active">
     <a ui-sref="albums">ALBUMS</a>
-  </h4> -->
-</section>
+  </h4>
+</section> -->
 
 <!-- <section>
   <h4 ui-sref-active="active" class="menu-item">
