--- a/browser/js/form/form.html
+++ b/browser/js/form/form.html
@@ -1,7 +1,7 @@
 <div ng-controller="FormCtrl" layout="column">
-  <div flex></br>
+  <div flex class="ui container segment form"></br>
   	<div class="field">
-	  	<div class="two fields">
+	  	<div class="three fields">
 			<div class="field">
 				<h4 class="ui dividing header">Underwriter name (optional)</h4>
 				<input type="text" name="underwriter_name" ng-model="underwriter" placeholder="ex: Katie Adler">
@@ -9,13 +9,15 @@
 	</div>
     <h4 class="ui dividing header">Types of entries you'd like to view (required)</h4>
 		<form class="ui form">
-		
 			<label>
-	        <input type="radio" ng-model="type" value="1">   Submissions to review</input>
+	      <input class="ui checkbox" type="radio" ng-model="type" value="1">   Submissions to review</input>
 	    </label></br>
 	    <label>
-	        <input type="radio" ng-model="type" value="2">   Policies</input>
-	    </label>
+	      <input class="ui checkbox" type="radio" ng-model="type" value="2">   Policies</input>
+	    </label></br>
+	    <label>
+	      <input class="ui checkbox" type="radio" ng-model="type" value="3">   Quotes rejected by clients</input>
+	    </label></br>
 		  <center><div class="ui green button" tabindex="0" ng-click="search(type)">Search</div></center>
 		</form>
   </div>
