--- a/browser/js/submission_to_review_result/submission_to_review_result.html
+++ b/browser/js/submission_to_review_result/submission_to_review_result.html
@@ -13,6 +13,7 @@
     </tr>
   </thead>
   <tbody>
+    <loader ng-show="!rows"></loader>
     <tr ng-repeat= "row in rows">
     	<td>{{row.SUBMISSION_NO}}</td>
 		  <td>{{row.AGENT_NAME}}</td>
