--- a/browser/index.html
+++ b/browser/index.html
@@ -26,7 +26,7 @@
 
 	<body ng-app="argo" layout="column">
 		<div class="ui container">
-  		<center><h1>This is an app to help Argo Digital underwriters to explore the database</h1></center></br>
+  		<center><h1>This is an app to help Argo Digital underwriters to explore their database</h1></center></br>
       <center><button class="ui teal button" ui-sref="form">Start</button></center></br>
       <ui-view></ui-view>
   	</div>
