--- a/browser/index.html
+++ b/browser/index.html
@@ -13,7 +13,7 @@
     <script src="/angular-material/angular-material.min.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
-		<script src="dist/semantic.min.js"></script>
+    <script src="dist/semantic.min.js"></script>
     <script src='/ng-infinite-scroll/build/ng-infinite-scroll.min.js'></script>
     <script src="/js/app.js"></script>
     <script src="/js/sidebar/sidebar.directive.js"></script>
@@ -21,12 +21,12 @@
     <script src="/js/policy_result/policy_result.js"></script>
     <script src="/js/submission_to_review_result/submission_to_review_result.js"></script>
     <script src="/js/rejected_quotes_result/rejected_quotes_result.js"></script>
+    <script src="/js/pending_quoted_submissions_result/pending_quoted_submissions_result.js"></script>
     <script src="/js/loader/loader.js"></script>
 	</head>
-
 	<body ng-app="argo" layout="column">
-		<div class="ui container">
-  		<center><h1>This is an app to help Argo Digital underwriters to explore their database</h1></center></br>
+    <div class="ui container">
+  		</br><center><h1>This is an app to help Argo Digital underwriters to explore their database</h1></center></br>
       <center><button class="ui teal button" ui-sref="form">Start</button></center></br>
       <ui-view></ui-view>
   	</div>
