--- a/browser/js/form/form.html
+++ b/browser/js/form/form.html
@@ -13,10 +13,14 @@
 	      <input class="ui checkbox" type="radio" ng-model="type" value="1">   Submissions to review</input>
 	    </label></br>
 	    <label>
+	      <input class="ui checkbox" type="radio" ng-model="type" value="4">   Pending quoted submissions</input>
+	    </label></br>
+	    <label>
+	    <!-- active policies? -->
 	      <input class="ui checkbox" type="radio" ng-model="type" value="2">   Policies</input>
 	    </label></br>
 	    <label>
-	      <input class="ui checkbox" type="radio" ng-model="type" value="3">   Quotes rejected by clients</input>
+	      <input class="ui checkbox" type="radio" ng-model="type" value="3">   Submissions rejected by clients</input>
 	    </label></br>
 		  <center><div class="ui green button" tabindex="0" ng-click="search(type)">Search</div></center>
 		</form>
