--- a/browser/js/submission_to_review_result/submission_to_review_result.html
+++ b/browser/js/submission_to_review_result/submission_to_review_result.html
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-    <loader ng-show="!rows"></loader>
+    <loader ng-show="!found"></loader>
     <tr ng-repeat= "row in rows">
     	<td>{{row.SUBMISSION_NO}}</td>
 		  <td>{{row.AGENT_NAME}}</td>
@@ -24,7 +24,7 @@
 		  <td>{{row.submission_date}}</td>
   </tbody>
 </table>
-<div ng-show="rows===[]">
+<div ng-show="found && !(rows===[])">
   <center><h2>No data entry found</h2></center></br>
   <center><button class="ui orange button" ui-sref="form">Make a new search</button></center>
 </div>
