--- a/browser/js/pending_quoted_submissions_result/pending_quoted_submissions_result.html
+++ b/browser/js/pending_quoted_submissions_result/pending_quoted_submissions_result.html
@@ -26,7 +26,7 @@
   		  <td>{{row.UNDERWRITER}}</td>
   </tbody>
 </table>
-<div ng-show="found && !(rows===[])">
+<div ng-show="noEntryFound">
   <center><h2>No data entry found</h2></center></br>
   <center><button class="ui orange button" ui-sref="form">Make a new search</button></center>
 </div>
