--- a/browser/js/policy_result/policy_result.html
+++ b/browser/js/policy_result/policy_result.html
@@ -29,7 +29,7 @@
     </div>
   </tbody>
 </table>
-<div ng-show="found && !(rows===[])">
+<div ng-show="noEntryFound">
   <center><h2>No data entry found</h2></center></br>
   <center><button class="ui orange button" ui-sref="form">Make a new search</button></center>
 </div>
