--- a/browser/js/rejected_quotes_result/rejected_quotes_result.html
+++ b/browser/js/rejected_quotes_result/rejected_quotes_result.html
@@ -28,7 +28,7 @@
 		  <td>{{row.UNDERWRITER_NAME}}</td>
   </tbody>
 </table>
-<div ng-show="found && !(rows===[])">
+<div ng-show="noEntryFound">
   <center><h2>No data entry found</h2></center></br>
   <center><button class="ui orange button" ui-sref="form">Make a new search</button></center>
 </div>
