--- a/browser/js/submission_to_review_result/submission_to_review_result.html
+++ b/browser/js/submission_to_review_result/submission_to_review_result.html
@@ -24,7 +24,7 @@
 		  <td>{{row.submission_date}}</td>
   </tbody>
 </table>
-<div ng-show="found && !(rows===[])">
+<div ng-show="noEntryFound">
   <center><h2>No data entry found</h2></center></br>
   <center><button class="ui orange button" ui-sref="form">Make a new search</button></center>
 </div>
